Changelog
=========

3.9 (unreleased)
----------------

- Fixes when file doesn't exist in the file system but still is in S3.
- Doc tweaks.
- Make setup compatible with latest version of pip.


3.8.1 (2017-12-03)
------------------

- Admin thumbnails were not displaying correctly.


3.8 (2017-12-03)
----------------

- Added support for Django 2.0.
- Dropped support for Django 1.8 and 1.10.
- Did not really work with Django 1.11 - sortedm2m library was broken. Upgraded sortedm2m and it now works with 1.11.
- New translation for Ukranian; updated translation for Spanish.
- Fixed template tag that was broken in Django 1.11.

3.7 (2017-05-10)
----------------

- Now works with Django 1.11. Deprecated support for Django 1.9.
- Fixed the management commands to work in the latest versions of Django.
- Fixed an issue with some photo sizes not being created (see #170).
- Updated translations for French and Basque (provided by matthieu.payet and urtzai).

3.6 (2016-10-05)
----------------

- Now works with Django 1.10 (to be precise: Photologue worked, but the unit tests did not).
- Updated urlpatterns in docs, tests and example project for Django 1.8+
- Enhance Python 2.7 EXIF info.
- Updated docs (contributed by lizwalsh).
- Fixed command plcreatesize (contributed by Mikel Larreategi).
- Fixed deprecated template settings (contributed by Justin Dugger).
- Updated translations for German and Russian.

3.5.1 (2016-01-13)
------------------

- Photologue 3.5 failed to install under Python 2.7. Looks like distutils does not like files
  with non-ascii filenames (reported in #149).
- Fix for issue #149 - bug with projects that extend ImageModel.


3.5 (2016-01-09)
----------------

- Increased length of 'title' fields to 250 chars in order to store longer title.
- Rotate image before resize, to comply with height/width constraints (see #145).
- Added forgotten migration (#148).
- Changing "Photo" image leaves extra files on server (#147).