@@ -7,12 +7,17 @@ python:
   - 3.6
 
 env:
-  - DJANGO="Django==2.0"
-  - DJANGO="Django==1.11.8"
+  - DJANGO="Django==2.1.1"
+  - DJANGO="Django==2.0.8"
+  - DJANGO="Django==1.11.15"
 
 matrix:
   exclude:
-    - env: DJANGO="Django==2.0"
+    - env: DJANGO="Django==2.1.1"
+      python: 2.7
+    - env: DJANGO="Django==2.1.1"
+      python: 3.4
+    - env: DJANGO="Django==2.0.8"
       python: 2.7
 
 install:
