@@ -45,6 +45,7 @@ setup(
                  'Programming Language :: Python :: 3',
                  'Programming Language :: Python :: 3.4',
                  'Programming Language :: Python :: 3.5',
+                 'Programming Language :: Python :: 3.6',
                  'Topic :: Utilities'],
     install_requires=get_requirements('requirements.txt'),
 )
